# cw3

./: CMakeLists.txt  README.md
include/: config.hpp  node.hpp  rng.h  runner.h  spinlock.hpp  timer.hpp  tree.hpp  validation.hpp
src/: main.cpp  node.cpp  spinlock.cpp  timer.cpp  tree.cpp  validation.cpp
